Modifying view orders and adding about us page

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -11,14 +11,14 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">The Open Door</a>
+      <a class="navbar-brand" href="/">The Open Door</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Maid Bhejdo<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">About Us</a></li>
+        <li class="active"><a href="#">Maid Bhejdo(TBD)<span class="sr-only">(current)</span></a></li>
+        <li><a href="/about_us">About Us</a></li>
         <li><a href="/orders?user_id=admin" id="my-orders">My Orders</a></li>
         <!--<li><a href="/orders/" id="view-orders">View Order</a></li>-->
       </ul>
@@ -49,8 +49,10 @@
     if(sessionStorage.loggedIn == "true"){
         $('#loginButton').hide();
         $('#loggedIn').show();
+        $('#my-orders').show();
     }else{
         $('#loginButton').show();
         $('#loggedIn').hide();
+        $('#my-orders').hide();
     }
 </script>
