--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *
  *= require bootstrap
  *= require bootstrap.min
+ *= require DateTimePicker.min
  *= require opendoor
  *= require_tree .
  *= require_self
