--- a/app/views/orders/_order_actions.html.erb
+++ b/app/views/orders/_order_actions.html.erb
@@ -3,12 +3,15 @@
   <%if @order[:status] == "created"%>
       <input type="submit" formmethod="post" formaction="/orders/confirm" class="btn btn-default" value="Confirm">
   <%elsif @order[:status] == "confirmed"%>
+      <input type="text" data-field="datetime" data-format="yyyy-MM-dd HH:mm:ss" name="start_time" value="<%= Time.now.to_s(:db)%>" readonly>
+      <div class="custom-datetime-picker"></div>
       <input type="submit" formmethod="post" formaction="/orders/start" class="btn btn-default" value="Start">
   <%elsif @order[:status] == "started"%>
+      <input type="text" data-field="datetime" data-format="yyyy-MM-dd HH:mm:ss" name="end_time" value="<%= Time.now.to_s(:db)%>" readonly>
+      <div class="custom-datetime-picker"></div>
       <input type="submit" formmethod="post" formaction="/orders/complete" class="btn btn-default" value="Complete">
   <%elsif @order[:status] == "completed"%>
       <input type="submit" formmethod="post" formaction="/orders/close" class="btn btn-default" value="Close">
-
   <%end%>
 
   <%if @order[:status].in? ["created", "confirmed"]%>
@@ -17,5 +20,6 @@
 </form>
 
 <script>
-
+  //Hack...this should have been in opendoors.js
+    $(".custom-datetime-picker").DateTimePicker();
 </script>
